add cnblog news

--- a/flaskr/app/templates/main.html
+++ b/flaskr/app/templates/main.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+<link href="/static/aggsite.css" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <title>供你所需的最新消息</title>
 </head>
 <body>
+<div class="post_nav_block_wrapper">
+                <ul class="post_nav_block">
+                        <li><a href="/info" class="current_nav">Test</a></li>
+                        <li><a href="/cnblog">博客园</a></li>
+                </ul>
+                <div class="clear"></div>
+            </div>
 
     <table>
         {% for info in infos %}
         <tr>
-            <td>author : {{info.topic_author}}</td>
+            <td><a class="titlelnk" href={{info.href}} target="_blank">{{info.title}}</a></td>
         </tr>
         <tr>
-            <td><a href={{info.topic_href}} target="_blank">{{info.topic_title}}</a></td>
+            <td><a>推荐指数：{{info.recommended}}</a></td>
+            <td><a>阅读指数：{{info.readed}}</a></td>
         </tr>
         {% endfor %}
     </table>
