--- a/flaskr/app/templates/main.html
+++ b/flaskr/app/templates/main.html
@@ -19,7 +19,7 @@
     <div class="post_item">
         <table>
             <tr>
-                <td><a class="titlelnk" href={{info.href}} target="_blank">{{info.title}}</a></td>
+                <td><a id={{info.id}} class="titlelnk" href={{info.href}} target="_blank">{{info.title}}</a></td>
             </tr>
             <tr>
                 <td><a class="article_view">推荐指数：{{info.recommended}}</a>
