--- a/flaskr/app/templates/main.html
+++ b/flaskr/app/templates/main.html
@@ -12,6 +12,7 @@
         <ul class="post_nav_block">
             <li><a href="/info" class={{class_status[0]}}>Test</a></li>
             <li><a href="/cnblog" class={{class_status[1]}}>博客园</a></li>
+            <li><a href="/bole" class={{class_status[2]}}>伯乐在线</a></li>
         </ul>
         <div class="clear"></div>
     </div>
